trying to fix sun/moon icons on mobile

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -200,7 +200,7 @@ button,
 	opacity: 0.7;
 }
 
-.theme-icon :global(svg) {
+.theme-icon svg {
 	width: 100%;
 	height: 100%;
 }
